--- a/index.html
+++ b/index.html
@@ -290,23 +290,23 @@
             </div>
             <div class="profile-column-ninth">
                 <div class="profile-info-ninth">
-                    <img src="img/hiago.jpg" alt="Seu Nome" class="profile-pic-ninth">
+                    <img src="img/hiago_sf.png" alt="Seu Nome" class="profile-pic-ninth">
                     <div>
                         <p class="profile-name-ninth">Hiago</p>
                         <p class="profile-title-ninth">Especialista em Marketing Digital</p>
                     </div>
                 </div>
                 <div class="profile-info-ninth">
-                    <img src="img/gabriel.jpg" alt="Seu Nome" class="profile-pic-ninth">
+                    <img src="img/gabriel_sf (2).png" alt="Seu Nome" class="profile-pic-ninth">
                     <div>
-                        <p class="profile-name-ninth">Gabriel Martins</p>
+                        <p class="profile-name-ninth">Gabriel</p>
                         <p class="profile-title-ninth">Programador Web</p>
                     </div>
                 </div>
                 <div class="profile-info-ninth">
-                    <img src="img/gu.jpg" alt="Seu Nome" class="profile-pic-ninth">
+                    <img src="img/gu_sf.png" alt="Seu Nome" class="profile-pic-ninth">
                     <div>
-                        <p class="profile-name-ninth">Hiago</p>
+                        <p class="profile-name-ninth">Gustavo</p>
                         <p class="profile-title-ninth">consultor de tráfego pago e financeiro
                         </p>
                     </div>
